# TinyECS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  changelog  tinyecs.cc  tinyecs.h
Example/: Makefile  main.cpp
Source/: CMakeLists.txt  Makefile  TinyECS.cpp  TinyECS.h
Tests/: ArchetypeTest.cpp  BasicsTest.cpp  CacheCallbackTest.cpp  CacheIteratorTest.cpp  CacheReverseTest.cpp  CacheTest.cpp  CemeteryTest.cpp  Component1Test.cpp  ComponentTest.cpp  DelayedTest.cpp  EntityReferenceTest.cpp  FieldProxyStringTest.cpp  IndexTest.cpp  MatcherTest.cpp  QueryFiltersEnumTest.cpp  QueryFiltersOperatorInTest.cpp  QueryFiltersWhereTest.cpp  QueryReverseTest.cpp  QuerySimpleTest.cpp  shares.cpp  shares.h
example/: CMakeLists.txt  Makefile  main.cc
tests/: ArchetypeTest.cpp  BasicsTest.cpp  CMakeLists.txt  CacheFiltersTest.cpp  CacheSortTest.cpp  CemeteryTest.cpp  Component1Test.cpp  ComponentTest.cpp  FieldProxyIntegralTest.cpp  Makefile  QueryFiltersBoolTest.cpp  QueryFiltersOperatorBetweenTest.cpp  QueryFiltersTest.cpp  WorldTest.cpp  archetype_test.cc  basics_test.cc  cache_callback_test.cc  cache_filters_test.cc  cache_iterator_test.cc  cache_reverse_test.cc  cache_reverse_test.cpp  cache_sort_test.cc  cache_test.cc  cemetery_test.cc  component1_test.cc  component_test.cc  delayed_test.cc  entity_reference_test.cc  field_proxy_integral_test.cc  field_proxy_string_test.cc  index_test.cc  matcher_test.cc  query_cache_callback_test.cc  query_cache_filters_test.cc  query_cache_test.cc  query_filters_bool_test.cc  query_filters_bool_test.cpp  query_filters_enum_test.cc  query_filters_operator_between_test.cc  query_filters_operator_between_test.cpp  (+12 more)
